--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,13 +5,17 @@
 @layer base {
     html {
         font-family: 'Roboto', sans-serif;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 100%;
+        background: rgb(16, 18, 42);
+        background: linear-gradient(180deg, rgba(16, 18, 42, 1) 50%, rgba(142, 38, 213, 1) 82%, rgba(226, 39, 191, 1) 97%);
     }
-}    
-/* @layer utilities {
-    .nav_link {
-        @apply px-4 py-4 text-xl font-roboto text-white;
-    }
-    .links {
-        @apply bg-fuchsia-600;
-    }
-} */
+
+}
+
+body {
+    /* background-color: #1a202c; Fallback color for non-supported browsers */
+
+}
